--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^18.16.1",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
@@ -21,10 +22,10 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "tailwindcss": "3.3.1",
-    "tsx": "^3.12.7",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/node": "^18.16.1"
+    "cypress": "^12.15.0",
+    "tsx": "^3.12.7"
   }
 }
